--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.1",
     "@mui/x-date-pickers": "^8.11.0",
-    "@tailwindcss/postcss": "^4.1.12",
+    "@vercel/analytics": "^1.5.0",
     "dayjs": "^1.11.18",
+    "geist": "^1.5.1",
     "next": "15.4.6",
-    "postcss": "^8.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "tailwindcss": "^4.1.12"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -31,8 +30,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5"
